cambios hechos a la documentacion
